--- a/index.css
+++ b/index.css
@@ -241,36 +241,63 @@ button path.fill {
 #devicesList [itemprop=connected] .indicator {
   margin-left: 0rem;
   margin-right: 1rem;
-  height: 0.5rem;
-  width: 0.5rem;
+  height: 6px;
+  width: 6px;
   border: 1px solid transparent;
-  transition: all ease-out 1s;
   border-radius: 100%;
   display: block;
+  background: transparent;
   content: ' ';
   position: relative;
+  transition:
+    background 0.15s cubic-bezier(0.165, 0.84, 0.44, 1),
+    border 0.15s cubic-bezier(0.165, 0.84, 0.44, 1)
 }
 
 #devicesList [itemprop=connected][value=disconnected] .indicator {
   border-color: hsla(3.8, 86.7%, 70.9%, 0.3);
 }
 
+#devicesList [itemprop=connected][value=connected] .indicator {
+
+}
+
+#devicesList [itemprop=connected][value=connected] .indicator:empty {
+  transition-delay: 0.5s;
+  border-color: hsla(115, 70%, 50%, 0.3);
+}
+
 #devicesList [itemprop=connected][value=connected] .indicator .activity {
-  animation: activity 0.15s running alternate 2 both cubic-bezier(0.165, 0.84, 0.44, 1);
+  border: 1px solid transparent;
   position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
+  left: -1px;
+  right: -1px;
+  top: -1px;
+  bottom: -1px;
   border-radius: 100%;
 }
 
-#devicesList [itemprop=connected][value=connected] .indicator {
-  border-color: hsla(115, 70%, 50%, 0.3);
-  box-shadow: 0 0 1rem hsla(115, 70%, 60%, 0.2);
+#devicesList [itemprop=connected][value=connected] .indicator .activity[value^=control] {
+  animation: activityControl 0.15s running alternate 2 both cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-@keyframes activity {
+#devicesList [itemprop=connected][value=connected] .indicator .activity[value^=note] {
+  animation: activityNote 0.15s running alternate 2 both cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+@keyframes activityControl {
+  0% {
+    background: hsla(190.4, 62.2%, 50%, 0.0);
+    border-color: hsla(190.4, 62.2%, 50%, 0.0);
+  }
+  100% {
+    background: hsla(190.4, 62.2%, 50%, 1.0);
+    border-color: hsla(190.4, 62.2%, 50%, 1.0);
+    box-shadow: 0 0 2rem hsla(190.4, 92.2%, 50%, 1.0);
+  }
+}
+
+@keyframes activityNote {
   0% {
     background: hsla(115, 70%, 60%, 0.0);
   }
