--- a/index.css
+++ b/index.css
@@ -23,7 +23,8 @@ h1, h2, h3, h4, h5, h6 {
   color: #DDD;
   line-height: 1.5;
 }
-h1, h2, h3, h4, h5, h6, button, .title {
+
+h1, h2, h3, h4, h5, h6, button, .message {
   font-family: 'Rajdhani', sans-serif;
   font-weight: 300;
   text-transform: uppercase;
@@ -123,17 +124,7 @@ button {
   justify-content: space-between;
   line-height: 0;
   border-radius: 0.8rem;
-  padding: 0.4rem 0.4rem;
-}
-
-
-@keyframes pulse {
-  from {
-    color: hsl(33.8, 96.7%, 65.9%);
-  }
-  to {
-    color: hsl(3.8, 100%, 70.9%);
-  }
+  padding: 0.85rem 0.4rem;
 }
 
 button:disabled {
@@ -158,7 +149,7 @@ button:hover {
     box-shadow: 0 0 1rem hsla(33.8, 96.7%, 65.9%, 0.2);
   }
   to {
-    box-shadow: 0 0 0.5rem hsla(33.8, 96.7%, 65.9%, 0.2);
+    box-shadow: 0 0 0.5rem hsla(33.8, 96.7%, 65.9%, 0.05);
   }
 }
 
@@ -171,14 +162,8 @@ button:focus {
     buttonFocusOut 2s ease-in 1.5s forwards;
 }
 
-button > svg {
+button > .mdi {
   margin-right: 0.75rem;
-  height: 0.9rem;
-  width: 0.9rem;
-}
-
-button path.fill {
-  fill: currentColor;
 }
 
 #devicesHeader {
@@ -209,16 +194,10 @@ button path.fill {
 #emptyDevices .content {
   background: hsla(0, 0%, 100%, 0.01);
   border-radius: 2px;
-  padding: 2rem 0;
-  align-self: stretch;
+  padding: 2rem;
   border-top: 1px solid hsla(0, 0%, 100%, 0.02);
   border-bottom: 1px solid hsla(0, 0%, 0%, 0.02);
   box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.01);
-}
-
-#emptyDevices p {
-  margin: 0;
-  margin-bottom: 1rem;
 }
 
 #emptyDevices:not(.show) {
@@ -236,8 +215,8 @@ button path.fill {
 
 .deviceRow {
   display: grid;
-  grid-template-columns: 1fr auto;
-  grid-row-gap: 0.5rem;
+  grid-template-columns: 1fr repeat(4, auto);
+  grid-column-gap: 0.5rem;
   align-items: center;
   background: hsla(0, 0%, 100%, 0.01);
   padding: 1rem 1rem;
@@ -247,6 +226,12 @@ button path.fill {
   border-top: 1px solid hsla(0, 0%, 100%, 0.02);
   border-bottom: 1px solid hsla(0, 0%, 0%, 0.02);
   box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.01);
+  text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.01);
+}
+
+.deviceRow .settings:hover {
+  transition: opacity 0.3s;
+  opacity: 0.7;
 }
 
 /*.deviceRow:first-child {*/
@@ -286,23 +271,48 @@ button path.fill {
     opacity: 0;
     transform: translateY(100%);
     filter: blur(10px);
+    pointer-events: none;
   }
 }
 
-.deviceRow.disconnected {
+.deviceRow .mdi {
+  opacity: 0.5;
+}
+
+.deviceRow [itemprop=name] {
+  animation: emptyIn 0.3s ease-out both;
+}
+
+.deviceRow.disconnected,
+.deviceRow:not(.ready) {
   color: hsla(0, 0%, 40.9%, 1.0);
   background: hsla(0, 0%, 90%, 0.01);
 }
 
-.deviceRow.disconnected [itemprop=name] {
+.deviceRow.ready.disconnected [itemprop=name] {
   text-decoration: line-through;
 }
 
-.deviceRow [itemprop=connected] {
-  position: relative;
-  display: flex;
-  align-items: center;
+.deviceRow [itemprop=battery] {
+  display: block;
+  transition: all ease-in-out 0.5s;
+  opacity: 0.5;
 }
+
+.deviceRow [itemprop=battery][value=low] {
+  color: hsla(5, 75%, 60%, 1.0);
+}
+
+.deviceRow.disconnected .battery [itemprop=battery] {
+  color: inherit;
+}
+
+/*.deviceRow [itemprop=connected] {*/
+  /*position: relative;*/
+  /*display: flex;*/
+  /*align-items: center;*/
+  /*line-height: 0;*/
+/*}*/
 
 @keyframes fade {
   0% {
@@ -331,26 +341,38 @@ button path.fill {
     color: transparent;
     transform: translateX(100%);
     filter: blur(10px);
+    pointer-events: none;
   }
 }
 
-.deviceRow [itemprop=connected] > span {
+.deviceRow .message {
   position: relative;
   margin-right: 1rem;
-  transition: all ease-out 1s;
+  transition: all ease-out 0.5s;
   font-size: 0.7rem;
   text-transform: uppercase;
   will-change: filter, color, opacity, transform;
   animation:
-    fade 0.5s ease-out both,
-    fadeOut 0.5s ease-in 4s forwards;
+    emptyIn 0.5s ease-out both,
+    emptyOut 0.5s ease-in 3s forwards;
 }
 
-.deviceRow [itemprop=connected][value=disconnected] > span {
+.deviceRow:not(.ready) .message {
+  animation:
+    emptyIn 0.5s 0.7s ease-out both,
+    emptyOut 0.5s ease-in 3s forwards;
+}
+
+
+.deviceRow.ready.connected > .message {
+  color: hsla(115, 70%, 60%, 0.9);
+}
+
+.deviceRow.disconnected .message {
   animation: fade 0.5s ease-out both;
 }
 
-.deviceRow [itemprop=connected] .indicator {
+.deviceRow .indicator {
   margin-left: 0rem;
   margin-right: 0.3rem;
   height: 6px;
@@ -366,22 +388,22 @@ button path.fill {
     border 0.15s cubic-bezier(0.165, 0.84, 0.44, 1)
 }
 
-.deviceRow [itemprop=connected][value=disconnected] .indicator {
+.deviceRow.disconnected .indicator {
   background-color: rgba(0, 0, 0, 0.1);
 }
 
-.deviceRow [itemprop=connected] .indicator {
+.deviceRow .indicator {
   border-color: hsla(115, 0%, 50%, 0.1);
 }
 
-.deviceRow [itemprop=connected][value=connected] .indicator:empty {
+.deviceRow.connected .indicator:empty {
   transition-delay: 0.1s;
   transition-duration: 0.2s;
   transition-timing-function: ease-in-out;
   border-color: hsla(115, 0%, 50%, 0.3);
 }
 
-.deviceRow [itemprop=connected][value=connected] .indicator .activity {
+.deviceRow.connected .indicator .activity {
   border: 1px solid transparent;
   position: absolute;
   left: -1px;
@@ -392,11 +414,11 @@ button path.fill {
   mix-blend-mode: lighten;
 }
 
-.deviceRow [itemprop=connected][value=connected] .indicator .activity[value^=control] {
+.deviceRow.connected .indicator .activity[value^=control] {
   animation: activityControl 0.15s running alternate 2 both cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-.deviceRow [itemprop=connected][value=connected] .indicator .activity[value^=note] {
+.deviceRow.connected .indicator .activity[value^=note] {
   animation: activityNote 0.15s running alternate 2 both cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
@@ -418,4 +440,122 @@ button path.fill {
     background: hsla(115, 70%, 60%, 0.9);
     box-shadow: 0 0 2rem hsla(115, 70%, 60%, 0.5);
   }
+}
+
+.spinner {
+  margin: 0 auto;
+  height: 2rem;
+  text-align: center;
+  font-size: 10px;
+  color: #AAA;
+  animation: emptyIn 0.5s 1s ease-out both;
+}
+
+.spinner > div {
+  background-color: currentColor;
+  height: 100%;
+  width: 0.5rem;
+  display: inline-block;
+  margin-right: 2px;
+  animation: stretchdelay 1.2s infinite ease-in-out;
+}
+
+.spinner .rect2 {
+  animation-delay: -1.1s;
+}
+
+.spinner .rect3 {
+  animation-delay: -1.0s;
+}
+
+.spinner .rect4 {
+  animation-delay: -0.9s;
+}
+
+.spinner .rect5 {
+  animation-delay: -0.8s;
+}
+
+@keyframes stretchdelay {
+  0%, 40%, 100% {
+    transform: scaleY(0.4);
+  }  20% {
+    transform: scaleY(1.0);
+  }
+}
+
+[data-cm] {
+  font-family: system-ui;
+  transition: opacity 0.1s linear;
+  min-width: 200px;
+  background-color: hsl(222.9, 8.1%, 15.5%);
+  border: 1px solid hsl(222.9, 10.1%, 18.5%);
+  opacity: 0;
+  border-radius: 4px;
+  box-shadow: 5px 5px 2rem rgba(0, 0, 0, 0.1);
+}
+
+[data-cm].visible {
+  transition: opacity 0.1s linear;
+  opacity: 1;
+}
+
+[data-cm] ol {
+  margin: 0;
+  padding: 2px 0;
+  list-style: none;
+}
+
+[data-cm-item] {
+  cursor: default;
+  transition: background 0.1s;
+  padding: 5px 25px;
+  color: #AAA;
+  /*background-color: #fff;*/
+  /*color: #333;*/
+}
+
+
+[data-cm-item]:hover {
+  background: hsla(0, 0%, 50%, 0.1);
+}
+
+[data-cm-item]:focus {
+  /*background-color: #ebebeb;*/
+  outline: none;
+}
+
+[data-cm-item-caller] {
+  padding-right: 10px;
+}
+
+[data-cm-item-caller]::after {
+  content: "▶";
+  display: inline-block;
+  float: right;
+  color: #333;
+  font-size: 10px;
+}
+
+[data-cm-item-special="separator"] {
+  margin: 5px 0;
+  border-bottom: 1px solid #ebebeb;
+  border-radius: 0;
+}
+
+[data-cm-item-special~="arrow"] {
+  margin: 0;
+  padding: 0;
+  background-color: #eee;
+  color: #999;
+  font-size: 12px;
+  text-align: center;
+}
+
+[data-cm-item-special="arrow up"]::after {
+  content: "▲";
+}
+
+[data-cm-item-special="arrow down"]::after {
+  content: "▼";
 }
