--- a/index.css
+++ b/index.css
@@ -65,6 +65,7 @@ a:hover {
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
   align-items: center;
+  grid-template-rows: 1fr auto;
 }
 
 .Panel {
@@ -440,6 +441,74 @@ button > .mdi {
     background: hsla(115, 70%, 60%, 0.9);
     box-shadow: 0 0 2rem hsla(115, 70%, 60%, 0.5);
   }
+}
+
+footer {
+  display: grid;
+  grid-row: 2;
+  grid-column: 2;
+  position: absolute;
+  bottom: 0;
+  width: 100vw;
+  transform-origin: center center;
+  will-change: filter, opacity;
+}
+
+.mdi {
+  min-width: 1em;
+}
+
+.signature {
+  padding: 1rem;
+  margin: 0.5rem;
+  opacity: 0.7;
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto;
+  grid-column-gap: 0.5rem;
+  transition: all cubic-bezier(0.165, 0.84, 0.44, 1) 0.5s;
+  font-size: 0.7rem;
+  font-family: 'Rajdhani', sans-serif;
+  font-weight: bold;
+  line-height: 1.2;
+  justify-self: center;
+  border: 1px solid transparent;
+}
+
+.signature:hover {
+  opacity: 1;
+  background: hsla(0, 0%, 100%, 0.02);
+  border-radius: 2px;
+  border-top: 1px solid hsla(0, 0%, 100%, 0.02);
+  border-bottom: 1px solid hsla(0, 0%, 0%, 0.02);
+  box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.01);
+}
+
+.signature .sigimg {
+  grid-column: 1;
+  grid-row: 1 / 4;
+  align-self: flex-start;
+}
+
+.signature img {
+  min-width: 4em;
+  min-height: 4em;
+  height: 4em;
+  transform: scale(1.2);
+  display: inline;
+  vertical-align: center;
+}
+
+.signature .made-with {
+  color: #DDD;
+  text-transform: uppercase;
+  font-size: 0.9em;
+  letter-spacing: 1px;
+}
+
+.signature .made-by {
+  color: #FFF;
+  font-size: 1.65em;
 }
 
 .spinner {
